Task 1 implementation. Missing title.

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -15,7 +15,7 @@
         <script type="text/babel">
 
           // 1. React.CreateElement
-          const hello = React.createElement("h1", null, "");
+          const hello = React.createElement("h1", null, "Hello from React");
 
           // 2. React.Component
           class HelloComponent extends React.Component {
