--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,7 +5,7 @@
         <title>React CDP</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="root"></div>
 
 
         <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
@@ -36,10 +36,21 @@
             return <h1>{value}</h1>;
           };
 
-            ReactDOM.render(
-              <HelloFunctional value="Hello from React Functional Component" />,
-              document.getElementById("app")
-            );
+          // Wrapper component
+          class App extends React.Component {
+            render() {
+              return (
+                <React.Fragment>
+                    <hello /> ????? not working
+                    <HelloComponent />
+                    <HelloPure />
+                    <HelloFunctional value="Hello from React Functional Component" />
+                </React.Fragment>
+              );
+            }
+          }
+
+          ReactDOM.render(<App />, document.getElementById('root'));
 
         </script>
     </body>
