--- a/src/public/index.html
+++ b/src/public/index.html
@@ -14,10 +14,8 @@
 
         <script type="text/babel">
 
-
-
           // 1. React.CreateElement
-          const Hello = React.createElement("h1", {  }, "Hello from React");
+          const Hello = React.createElement("h1", null, "Hello from React");
 
           class HelloWrapper extends React.Component{
             render(){
